examples/errors/syntax-errors/src/ast.hsy
//

mod submodule_name

struct A {}

// submodules can only be defined in the root

impl A:
    mod submodule_name

enum IllFormedEnumType
| 